k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: textloop-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: textloop.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: textloop-service
                port:
                  number: 80
